# foodopenlab.com

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.server.yml  docker-compose.yaml  pyrightconfig.json
backend/: .dockerignore  .env.auth.example  .gitignore  .importlinter  CLAUDE.md  Dockerfile  README.md  auth_main.py  intent_test.txt  main.py  pyproject.toml  pytest.ini  requirements-heavy.txt  requirements.txt  run_dev.py  seed_admin.py  seed_categories.py
backend/_docs/: CLAUDE.md  backend_ver_log.md  entity-rules.md  mfds-erd.md  remain.md  server-migration.md
backend/alembic/: env.py
backend/alembic/versions/: 1e4fd7b6809c_moneyball_soccer_erd_with_pgvector_.py  20260604_01_titanic_person_booking.py  20260604_02_titanic_typed_columns.py  20260610_01_titanic_passenger_id_str.py  20260720_01_expert_users_oauth_provider_id.py  e97b22871765_apply_erd_v10.py
backend/apps/adapters/: db_health_adapter.py
backend/apps/auth/_docs/: CLAUDE.md  auth-gateway-harness.md
backend/apps/auth/dependencies/: auth_provider.py
backend/apps/auth/domain/: exceptions.py
backend/apps/auth/tests/: conftest.py  fake_redis.py  test_auth_flow.py  test_protected_demo.py  test_redis_refresh_session.py  test_rs256_token_issuer.py  test_seraph_token_guard.py
backend/apps/braindead/_docs/: rule.md
backend/apps/braindead/dependencies/: contact_provider.py  discord_provider.py  email_provider.py  inbox_provider.py  judge_provider.py  spam_provider.py  telegram_provider.py  watcher_provider.py
backend/apps/mfds_admin/: __init__.py
backend/apps/mfds_admin/_docs/: mfds-admin-erd.md
backend/apps/mfds_admin/app/: exceptions.py
backend/apps/mfds_admin/dependencies/: __init__.py  admin_auth.py  admin_google_auth.py  logs.py  members.py  whitelist.py
backend/apps/mfds_user/: __init__.py
backend/apps/mfds_user/_docs/: fine-tuning.md  mfds-erd.md  pgadmin.md  식품_축산물_건강기능식품_영업정리.md
backend/apps/mfds_user/data/: food_safety_sync_state.json  mfds_silence.json  recall_cache.json  recall_catalog.json  sanction_cache.json  sanction_catalog.json
backend/apps/mfds_user/dependencies/: anonymous.py  auth.py  auth_helper.py  chat.py  daily_report.py  (+12 more)
backend/core/: torch_test.py
backend/core/lol/: v1_mid_faker_orchestrator.py
backend/core/matrix/: external_api_budget.py  grid_admin_guard_manager.py  grid_cypher_password_manager.py  grid_device_manager.py  grid_embedding_manager.py  grid_exaone_llm_manager.py  grid_google_oauth_manager.py  grid_keymaker_secret_manager.py  grid_oracle_database_manager.py  grid_redis_manager.py  grid_seraph_token_guard_manager.py
backend/data/: admin_settings.json
backend/scratch/: populate_users.py
backend/scripts/: generate_jwt_keys.sh  validate-harness.py
backend/tools/: check_db_stats.py  run_daily_report_generate.py  run_food_safety_sync.py  run_scienceon_smoke.py
(+892 files in other folders)
